@@ -26,10 +26,6 @@ XFAIL_TESTS += no-double-quotes.test
 # Currently, ratfor builtin `define' is case-insensible w.r.t. symbol names
 XFAIL_TESTS += define-case-sensibility.test
   
-# The "verbatim output" functionality is partly broken (line wrapping is
-# still performed on lines that should be copied verbatim).
-XFAIL_TESTS += verbatim-long-line.test
-
 # We need this auxiliary variable to keep the list of *all* test scripts
 # so that the user can override the $(TESTS) variable without clashing
 # with consistency checks done by  the `check-list-of-tests' target defined
